kubernetes/applications/media/transmission/ingreass.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - transmission.shreck.io
      secretName: shreck-io-tls
  rules:
    - host: transmission.shreck.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
