kubernetes/applications/media/transmission/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission-internal
  namespace: media
  labels:
    app: transmission
    access: internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`transmission.home.shreck.io`)
      kind: Rule
      services:
        - name: transmission
          port: 9091
      middlewares:
        - name: internal-chain
          namespace: traefik
